--- a/README.html
+++ b/README.html
@@ -1,6 +1,6 @@
-- 👋 Hi, I’m @Hrusikesh1996
-- 👀 I’m interested in ...
-- 🌱 I’m currently learning ...
+- 👋 Hi, I’m Hrusikesh Sethi
+- 👀 I’m interested in coding
+- 🌱 I’m currently learning fullstack web devloper
 - 💞️ I’m looking to collaborate on ...
 - 📫 How to reach me ...
 
